Kubernetes/ds.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nginx-ds
  labels: 
    env: demo
spec:
  template:
    metadata:
      labels:
        env: demo
      name: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
  selector:
    matchLabels:
      env: demo
