Kubernetes/pod-myapp.yml
# comment
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  labels: 
    name: myapp-pod
spec:
  containers: 
  - name: myapp-container
    image: busybox:1.28
    command: ['sh', '-c', 'echo the app is running! && sleep 3600']
