Kubernetes/rc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
  labels: 
    env: demo
spec:
  template:
    metadata:
      labels:
        env: demo
      name: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
  replicas: 3
  selector:
    matchLabels:
      env: demo
