Kubernetes/clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: cluster-svc
  labels:
    env: demo
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    env: demo
