Kubernetes/lb.yml
apiVersion: v1
kind: Service
metadata:
  name: lb-svc
  labels:
    env: demo
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    env: demoq
